# sharedprocesspool

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
sharedprocesspool/: __init__.py  cli.py  workpool.py
sharedprocesspool/queue/: queue.h
sharedprocesspool/shared_queue/: CMakeLists.txt
sharedprocesspool/shared_queue/include/: shared_queue.h
sharedprocesspool/shared_queue/src/: setup.py  shared_queue.c  shmqueuemodule.c
sharedprocesspool/shared_queue/test/: tests.cpp
tests/: __init__.py  test_sharedprocesspool.py  test_workpool.py
